feat: implementando rotas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<router-outlet />
-<app-header></app-header>
+<h1>Home</h1>
+<p>Title: {{ taskTitle }}</p>
+<p>Coins: {{ coins }}</p>
+<button (click)="updateCoins()">Buy a coin</button>
